--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
           <option value="0" disabled selected>--оберіть локацію--</option>
           <option value="English">English</option>
           <option value="Spain">Spain</option>
-          <option value="Poland">Poland</option>
+          <option value="Polish">Polish</option>
         </select>
       </div>
 
